# ai-advent-task-1

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs
src/: lib.rs  main.rs
